# active-joined-worlds

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_INTRO_AJW_DRAFT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  screenshot-user.mjs
apps/lobster-tui/: Cargo.toml
apps/lobster-tui/src/: app_bootstrap.rs  app_entry.rs  bootstrap_paths.rs  compact_shell.rs  conversation_bootstrap.rs  conversation_meta.rs  display_context.rs  input_panel.rs  launch_context_builder.rs  launch_seed.rs  layout_constants.rs  lib.rs  local_message.rs  main.rs  message_projection.rs  nav_panel.rs  plain_panel_render.rs  plain_transcript.rs  ratatui_chrome.rs  ratatui_frame.rs  ratatui_panel_lines.rs  render_profile.rs  scene_panel.rs  seed_bootstrap.rs  selection_state.rs  shell_layout.rs  surface_meta.rs  surface_projection.rs  terminal_app_loop.rs  terminal_key_dispatch.rs  terminal_runtime.rs  terminal_shell_dispatch.rs  terminal_smoke_script.rs  terminal_snapshot.rs  terminal_submission.rs  test_support.rs  tests.rs  text_render.rs  transcript_panel.rs  transport_bootstrap.rs  (+4 more)
apps/lobster-waku-gateway/: Cargo.toml
apps/lobster-waku-gateway/src/: auth_runtime.rs  city_runtime.rs  cli_runtime.rs  conversation_runtime.rs  core_runtime.rs  export_runtime.rs  federation_read.rs  gateway_models.rs  gateway_test_support.rs  gateway_tests.rs  governance_mutation_runtime.rs  governance_runtime.rs  http_auth_routes.rs  http_city_write_routes.rs  http_governance_write_routes.rs  http_read_routes.rs  http_router.rs  http_support.rs  http_write_routes.rs  main.rs  message_runtime.rs  provider_runtime.rs  request_runtime.rs  shell_runtime.rs  transport_runtime.rs
crates/chat-storage/: Cargo.toml
crates/chat-storage/src/: lib.rs
crates/transport-waku/: Cargo.toml
crates/transport-waku/src/: lib.rs
docs/: ADMIN_FUNCTION_CATALOG.md  AUTH_AND_REGISTRATION.md  CARETAKER_PLAYBOOK.md  DEPLOYMENT_PITFALLS_AND_HARDENING.md  DEPLOYMENT_SMOKE_TEST.md  DEVICE_STRATEGY.md  H5_SHELL_PLAN.md  IMPLEMENTATION_PHASES.md  MLS_SKELETON.md  NOVEL_TTS_PLAYBOOK.md  OPENCLAW_AGENT_INTERFACE.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  PIXEL_ASSET_TILING_PLAN.md  PRODUCT_CHARTER.md  RESOURCE_BUDGET.md  SPATIAL_SCENE_MODEL.md  THEME_AND_NOMENCLATURE.md  TUI_RENDERING_STRATEGY.md  VISUAL_REFERENCE_STACK.md  WAKU_GATEWAY_PROTOCOL.md  WEB_SHELL_ACCEPTANCE.md  WORLD_CITY_API.md  WORLD_CITY_MODEL.md  WORLD_SQUARE_AND_SAFETY.md
scripts/: install-server.sh  package-release.sh  preflight.sh  smoke-auth-registration.sh  (+12 more)
(+101 files in other folders)
