[package]
name = "lobster-tui"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
chat-core.workspace = true
host-adapter.workspace = true
transport-waku.workspace = true
crypto-mls.workspace = true
ai-sidecar.workspace = true
chat-storage.workspace = true
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
