[package]
name = "lobster-waku-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
chat-core.workspace = true
chat-storage.workspace = true
host-adapter.workspace = true
transport-waku.workspace = true
crypto-mls.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
hex = "0.4"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
