[package]
name = "chat-storage"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
chat-core.workspace = true
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
