[package]
name = "transport-waku"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
chat-core.workspace = true
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
